# bank-score

./: LANGGRAPH_README.md  MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_EN.md  PII_MASKING_README.md  README.md  TODO.txt  app.py  config.yaml  docker-compose.yaml  main.py  politica_credito_v1.md  presidio_ad_hoc_recognizers.json  pyproject.toml
anonymizer_proxy/: Dockerfile  app.py  requirements.txt
chunks_db/: chroma.sqlite3
src/agent/: agent_langgraph_model.py
src/class/: credit_analytic_data.py
src/dataprovider/: chroma_db.py  llm_factory.py
src/entrypoint/: controller.py
src/node/: state.py  state_test.py
src/service/: find_data_by_similarity_relevance_scores.py  generate_chunks_service.py  generate_prompt.py  get_chat_model.py  get_client_analysis_risk_descritpion.py  get_context_by_results.py  get_credit_analysis_prompt.py  get_embedding_service.py  get_llm_with_tools.py  get_results_by_relevance_score.py  get_risk_analysis_prompt.py  load_source_data_service.py  rag_langgraph_service.py  rag_service.py  save_data_db.py  upload_files.py
src/tools/: search_tool.py  validate_credit_policy_tool.py
